# housing-prices

./: .gitignore  pyproject.toml  scraper.py
src/: carousell_scraper.py  main.py  parser.py
