[project]
name = "housing-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "requests>=2.32.3",
    "ruff>=0.9.9",
    "tenacity>=9.0.0",
]
